make/config/projectcontour/gateway.yaml
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: acmesolver
spec:
  controllerName: projectcontour.io/projectcontour/contour

---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: acmesolver
  namespace: projectcontour
spec:
  gatewayClassName: acmesolver
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
